--- a/css/style.css
+++ b/css/style.css
@@ -164,9 +164,11 @@ footer a:hover {
     text-decoration: none;
 }
 
-.nav-item {
-    margin-left: 5px;
-    margin-right: 5px;
+footer {
+    position: fixed;
+    height: 100px;
+    bottom: 0;
+    width: 100%;
 }
 
 
